* Curve: The registration form wasn't properly aligned (login.css) [Bug 3508]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8628 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/login.css
+++ b/Themes/curve/css/login.css
@@ -19,6 +19,7 @@
 dl.register_form
 {
 	padding: 0;
+	overflow: auto;
 }
 .register_form dt
 {
@@ -40,8 +41,11 @@ dl.register_form
 }
 .register_form dd
 {
-	margin: 0 0 1.5em 0;
-}
+    margin: 0 0 1.5em 0;
+    float: left;
+    *float: none;
+    *width: auto;
+} 
 .register_form dt span
 {
 	display: block;
